# OpenCV-Marker-less-AR

src/: CMakeLists.txt
src/Main/: cameraCalibration.cpp  guiAR.cpp  guiAR.h  main.cpp  utilFunctions.cpp  utilFunctions.h
src/ObjRecog/: controlOR.cpp  controlOR.h  imageDB.cpp  imageDB.h  visualWords.cpp  visualWords.h
src/Overlay/: GLMetaseq.c  modelObjectFactory.h  mqoModelObject.h  mqoSeqModelObject.h  slideModelObject.cpp  slideModelObject.h  viewModel.cpp  viewModel.h
src/TestData/config/: camera_matrix_qcam.txt  config.xml  db.txt  vw_index.yaml
src/TestData/marker/: Thumbs.db
src/TestData/slides/: slide1.xml
src/Tracking/: kltTrackingOBJ.cpp  kltTrackingOBJ.h  trackingOBJ.h
